feat: add Spotless Maven plugin for code formatting

--- a/Microservice-GGO-Cuentas/Dockerfile
+++ b/Microservice-GGO-Cuentas/Dockerfile
@@ -1,14 +1,14 @@
-# 1. Imagen base con JDK 21
+# 1. Base image with JDK 21
 FROM eclipse-temurin:21-jdk-jammy
 
-# 2. Directorio de trabajo dentro del contenedor
+# 2. Working directory inside the container
 WORKDIR /app
 
-# 3. Copiar el JAR compilado del target al contenedor
+# 3. Copy the compiled JAR from target to the container
 COPY target/microservice-ggo-cuentas-0.0.1-SNAPSHOT.war /app/microservice-ggo-cuentas-0.0.1-SNAPSHOT.war
 
-# 4. Exponer el puerto en el que corre tu Spring Boot
+# 4. Expose the port where Spring Boot runs
 EXPOSE 8082
 
-# 5. Comando por defecto para ejecutar la aplicación
+# 5. Default command to run the application
 CMD ["java", "-jar", "microservice-ggo-cuentas-0.0.1-SNAPSHOT.war"]
