--- a/crud-cuentas/Dockerfile
+++ b/crud-cuentas/Dockerfile
@@ -1,19 +1,19 @@
-# 1. Imagen base con JDK 21
+# 1. Base image with JDK 21
 FROM eclipse-temurin:21-jdk-jammy
 
-# 2. Directorio de trabajo dentro del contenedor
+# 2. Working directory inside the container
 WORKDIR /app
 
-# 3. Copiar el JAR compilado del target al contenedor
+# 3. Copy the compiled JAR from target to the container
 COPY target/crud-cuentas-0.0.1-SNAPSHOT.war /app/crud-cuentas-0.0.1-SNAPSHOT.war
 
-# 4. Exponer el puerto en el que corre tu Spring Boot
+# 4. Expose the port where Spring Boot runs
 EXPOSE 8081
 
-# 5. Variables de entorno para la conexión a MySQL (opcional si quieres reemplazar application.properties)
+# 5. Environment variables for MySQL connection (optional if you want to replace application.properties)
 # ENV SPRING_DATASOURCE_URL=jdbc:mysql://127.0.0.2:3306/cuentasUsuariosdb
 # ENV SPRING_DATASOURCE_USERNAME=root
 # ENV SPRING_DATASOURCE_PASSWORD=1234
 
-# 6. Comando por defecto para ejecutar la aplicación
+# 6. Default command to run the application
 CMD ["java", "-jar", "crud-cuentas-0.0.1-SNAPSHOT.war"]
