--- a/middlewere-cuentas/Dockerfile
+++ b/middlewere-cuentas/Dockerfile
@@ -1,15 +1,15 @@
-# 1. Imagen base con JDK 21
+# 1. Base image with JDK 21
 FROM eclipse-temurin:21-jdk-jammy
 
-# 2. Directorio de trabajo dentro del contenedor
+# 2. Working directory inside the container
 WORKDIR /app
 
-# 3. Copiar el JAR compilado del target al contenedor
+# 3. Copy the compiled JAR from target to the container
 COPY target/middlewere-cuentas-0.0.1-SNAPSHOT.war /app/middlewere-cuentas-0.0.1-SNAPSHOT.war
 
-# 4. Exponer el puerto en el que corre tu Spring Boot
+# 4. Expose the port where Spring Boot runs
 EXPOSE 8080
 
-# 6. Comando por defecto para ejecutar la aplicación
+# 6. Default command to run the application
 CMD ["java", "-jar", "middlewere-cuentas-0.0.1-SNAPSHOT.war"]
 
